// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LoginSocialButtons /> renders all buttons 1`] = `
<Fragment>
  <div
    className="font-weight-semi-bold"
  >
    authenticate-with
  </div>
  <LoginSocialButton
    type="saml"
  />
  <LoginSocialButton
    buttonColor="#ABABAB"
    key="0"
    labelColor="#FFFFFF"
    switchUserMode={false}
    text="Cap Collectif Oauth2 Provider"
    type="openId"
  />
  <LoginSocialButton
    justifyContent="center"
    key="1"
    type="franceConnect"
  />
  <LoginSocialButton
    type="cas"
  />
  <p
    className="p--centered"
  >
    login.or
  </p>
</Fragment>
`;

exports[`<LoginSocialButtons /> renders nothing 1`] = `""`;

exports[`<LoginSocialButtons /> renders only CAS button 1`] = `
<Fragment>
  <div
    className="font-weight-semi-bold"
  >
    authenticate-with
  </div>
  <LoginSocialButton
    type="cas"
  />
  <p
    className="p--centered"
  >
    login.or
  </p>
</Fragment>
`;

exports[`<LoginSocialButtons /> renders only Facebook button 1`] = `""`;

exports[`<LoginSocialButtons /> renders only FranceConnect button 1`] = `
<Fragment>
  <div
    className="font-weight-semi-bold"
  >
    authenticate-with
  </div>
  <LoginSocialButton
    justifyContent="center"
    key="0"
    type="franceConnect"
  />
  <p
    className="p--centered"
  >
    login.or
  </p>
</Fragment>
`;

exports[`<LoginSocialButtons /> renders only OpenID button 1`] = `
<Fragment>
  <div
    className="font-weight-semi-bold"
  >
    authenticate-with
  </div>
  <LoginSocialButton
    buttonColor="#ABABAB"
    key="0"
    labelColor="#FFFFFF"
    switchUserMode={false}
    text="Cap Collectif Oauth2 Provider"
    type="openId"
  />
  <p
    className="p--centered"
  >
    login.or
  </p>
</Fragment>
`;

exports[`<LoginSocialButtons /> renders only SAML button 1`] = `
<Fragment>
  <div
    className="font-weight-semi-bold"
  >
    authenticate-with
  </div>
  <LoginSocialButton
    type="saml"
  />
  <p
    className="p--centered"
  >
    login.or
  </p>
</Fragment>
`;

exports[`<LoginSocialButtons /> renders without OR separator 1`] = `
<Fragment>
  <div
    className="font-weight-semi-bold"
  >
    authenticate-with
  </div>
  <LoginSocialButton
    type="saml"
  />
  <LoginSocialButton
    buttonColor="#ABABAB"
    key="0"
    labelColor="#FFFFFF"
    switchUserMode={false}
    text="Cap Collectif Oauth2 Provider"
    type="openId"
  />
  <LoginSocialButton
    justifyContent="center"
    key="1"
    type="franceConnect"
  />
  <LoginSocialButton
    type="cas"
  />
</Fragment>
`;
